In the REST API, you can specify a year range (year_first, year_last) when exploring research results. Cleaned up Cypher queries.
